--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -353,4 +353,11 @@
     <string name="action_toggle_favorite">Toggle favorite</string>
     <string name="pref_summary_show_song_number">Show the song track number in the playing queue and the notification</string>
     <string name="pref_title_show_song_number">Show song track number</string>
+    <string name="pref_summary_allow_random_album">At the end of the playing queue a random album will be chosen</string>
+    <string name="pref_title_allow_random_album">Album shuffling</string>
+    <string name="pref_summary_genre_album_shuffling">Following the genre of the last song instead of choosing at random</string>
+    <string name="pref_title_genre_album_shuffling">Album shuffling by genre</string>
+    <string name="next_album">Next album:</string>
+    <string name="shuffle_album">Shuffle album</string>
+    <string name="shuffle_album_genre">Shuffle album with same genre</string>
 </resources>
