--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -327,6 +327,9 @@
     <string name="pref_summary_rg_preamp">Set preamp when ReplayGain is enabled</string>
     <string name="pref_rg_disabled">Disabled</string>
     <string name="error_no_app_for_intent">No application is available to open this page.</string>
+    <string name="error_random_album_only_one_album">There is no other album to get</string>
+    <string name="error_random_album_only_two_album">There is only one other album</string>
+    <string name="error_random_album_repeat_mode">Cannot activate the repeat mode when in album shuffling</string>
     <!-- SAF -->
     <string name="saf_error_uri">Can\'t get SAF URI</string>
     <string name="saf_write_failed">File write failed: %s</string>
