--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -347,6 +347,7 @@
     <string name="next_album">Album suivant :</string>
     <string name="shuffle_album">Recharger album aléatoirement</string>
     <string name="shuffle_album_genre">Recharger album dans le même genre</string>
+    <string name="shuffle_album_artist">Recharger album avec le même artist</string>
     <string name="error_random_album_only_one_album">Aucun autre album n\'est disponible</string>
     <string name="error_random_album_only_two_album">Seul un album possible via cette action</string>
     <string name="error_random_album_repeat_mode">Répetition impossible en mode album aléatoire</string>
