--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -330,6 +330,7 @@
     <string name="error_random_album_search_history">You have search every album in this category</string>
     <string name="error_random_album_only_one_album">There is no other album to get</string>
     <string name="error_random_album_only_two_album">There is only one other album</string>
+    <string name="error_random_album_no_new_found">No other album where found with this criteria</string>
     <string name="error_random_album_repeat_mode">Cannot activate the repeat mode when in album shuffling</string>
     <!-- SAF -->
     <string name="saf_error_uri">Can\'t get SAF URI</string>
